Add download route and controller & update /from-dir to /dir
